# database-transactions

./: .gitignore  CONTRIBUTING.md  README.md  biome.json  docker-compose.yml  package.json  renovate.json  tsconfig.json
python/: conftest.py  pyproject.toml
python/harness/: __init__.py  dialects.py  loader.py  run.py  scenario.py
python/scenarios/mysql/01-basics/: aborted-transaction.py  atomicity.py  autocommit-visibility.py  savepoint-nesting.py  savepoint-recovery.py
python/scenarios/mysql/02-isolation/: current-reads.py  dirty-read.py  lost-update-read-committed.py  lost-update-repeatable-read.py  non-repeatable-read.py  phantom-read.py  stable-snapshot.py  update-recheck.py  write-skew-rr.py  write-skew-serializable.py
python/scenarios/mysql/03-locking/: alter-table-outage.py  ddl-lock-timeout.py  deadlock-avoidance.py  deadlock.py  fk-shared-lock.py  for-update-blocks.py  lock-mode-matrix.py  lock-queue.py  lock-timeout.py  monitoring-locks.py  nowait.py  skip-locked.py
python/scenarios/postgres/01-basics/: aborted-transaction.py  atomicity.py  autocommit-visibility.py  savepoint-nesting.py  savepoint-recovery.py
python/scenarios/postgres/02-isolation/: concurrent-update-40001.py  lost-update-read-committed.py  lost-update-repeatable-read.py  no-dirty-reads.py  non-repeatable-read.py  phantom-read.py  read-only-anomaly.py  stable-snapshot.py  update-recheck.py  write-skew-rr.py  write-skew-serializable.py
python/scenarios/postgres/03-locking/: alter-table-outage.py  ddl-lock-timeout.py  deadlock-avoidance.py  (+9 more)
python/tests/: test_scenarios.py
(+581 files in other folders)
