[project]
name = "database-transactions-python"
version = "0.1.0"
description = "Cross-driver check for the database-transactions scenarios — same YAML claims, asserted through psycopg + PyMySQL"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "pymysql>=1.1",
    "cryptography>=42",   # MySQL 8.4's caching_sha2_password auth needs it
    "pyyaml>=6",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-timeout>=2", "ruff>=0.14"]

[tool.pytest.ini_options]
addopts = "-q --timeout=90"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.pyright]
venvPath = "."
venv = ".venv"
